--- a/index.html
+++ b/index.html
@@ -23,25 +23,50 @@
     <![endif]-->
   </head>
   <body>
-    <h2 class="wetasphalt bottom-border"> Guang Yang </h1>
+    <h2 class="wetasphalt bottom-border-name"> Guang Yang </h1>
     <div class="row outer-top-info">
         <div class="span14">
             <div class="row inner-top-info">
                 <div class="span5">
                     <img src="profilepic.jpg">
                 </div> 
-                <div class="span8 top-info-list"> 
-                    <ul>
+                <div class="span6 top-info-list"> 
+                    <ul class="top-info-list">
                         <li>M.S. student (expected: May 2014)</li>
                         <li><a href="http://www.ieor.berkeley.edu/">Department of Industrial Engineering and Operations Research</a></li>
                         <li><a href="http://www.berkeley.edu/index.html">University of California, Berkeley</a></li>
-                        <li><img class="email" src="email.png">g78 [AT] berkeley [DOT] edu</li>
+                        <li><img class="email" src="email.png">gy8 [AT] berkeley [DOT] edu</li>
                         <li><img class="telephone" src="telephone.png"> (205) 213 - 3198 </li>
                     </ul>
                 </div> 
             </div>    
         </div>    
-    </div>   
+    </div>
+    
+    <h3 class="wetasphalt bottom-border-heading topic-header"> About me </h3>
+    <ul class="topic-list">
+        <li> My resume is available <a href="Guang_Yang_Resume.pdf">here</a></li>
+        <li> With a background in Applied Mathematics, I am interested in Optimization in the context of Health Care applications. Currently, I am working with <a href="http://ieor.berkeley.edu/~atamturk/">Prof Alper Atamtürk</a> and <a href="http://goldberg.berkeley.edu/">Prof Ken Goldberg</a> on developing new algorithms to improve the quality of treatment in Brachytherapy.</li>
+    </ul>
+
+    <h3 class="wetasphalt bottom-border-heading topoic-header"> Education </h3>
+    <ul class="topic-list">
+        <li class="education-item"> University of California, Berkeley </li>
+            <ul>
+                <li class="education-item"> M.S. in Industrial Engineering & Operations Research </li>
+                <li class="school-item"> Expected: May 2014 </li>
+            </ul>
+        <li class="education-item"> Rice University </li>
+            <ul>
+                <li class="education-item"> B.A. in Computational and Applied Mathematics</li>
+                <li class="school-item"> August 2011 - May 2013 </li>
+            </ul>
+        <li class="education-item"> Appalachian State University </li>
+            <ul>
+                <li class="education-item"> Completed Courses in Mathematics and Actuarial Science</li>
+                <li class="education-item"> August 2009 - May 2011 </li>
+            </ul>
+    </ul>    
 
 </body>
 </html>
