--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h6 class="wetasphalt bottom-border-heading topic-header"> About me </h6>
     <ul class="topic-list">
         <li> My resume is available <a href="Guang_Yang_Resume.pdf">here</a></li>
-        <li> With a background in Applied Mathematics, I am interested in Optimization in the context of Health Care applications. Currently, I am working with <a href="http://ieor.berkeley.edu/~atamturk/">Prof Alper Atamtürk</a> and <a href="http://goldberg.berkeley.edu/">Prof Ken Goldberg</a> on developing new algorithms to improve the quality of treatment in Brachytherapy.</li>
+        <li> My background is in Computational Mathematics with a focus in Health Care applications. In collaboration with UCSF, I am currently working with <a href="http://ieor.berkeley.edu/~atamturk/">Professor Alper Atamtürk</a> and <a href="http://goldberg.berkeley.edu/">Professor Ken Goldberg</a> on developing new algorithms to improve the quality of treatment in prostate Brachytherapy.</li>
     </ul>
 
     <h6 class="wetasphalt bottom-border-heading topic-header"> Education </h6>
