changed expected graduation date

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div> 
                 <div class="span6 top-info-list"> 
                     <ul class="top-info-list">
-                        <li class="top-item">M.S. student (expected: May 2014)</li>
+                        <li class="top-item">M.S. student (expected: Dec. 2014)</li>
                         <li class="top-item"><a href="http://www.ieor.berkeley.edu/">Department of Industrial Engineering and Operations Research</a></li>
                         <li class="top-item"><a href="http://www.berkeley.edu/index.html">University of California, Berkeley</a></li>
                         <li class="top-item"> gy8 [AT] berkeley [DOT] edu</li>
