Change resume hyperlink to github resume repo directly

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
     <h6 class="wetasphalt bottom-border-heading topic-header"> About me </h6>
     <ul class="topic-list">
-        <li> My resume is available <a href="yang_resume.pdf">here</a></li>
+        <li> My resume is available <a href="https://github.com/gy8/resume/blob/master/yang_resume.pdf?raw=true">here</a></li>
         <li> With a background in Computational Mathematics, I am interested in learning and applying data science. Currently, I am the TA for the course <a href="http://datascience.berkeley.edu/academics/curriculum/exploring-analyzing-data/">Exploring and Analyzing Data</a>, part of the curriculum for <a href="http://datascience.berkeley.edu">Master in Data Science</a> at Berkeley.
     </ul>
 
